--- a/sites/all/themes/dalibert/sass/styles.scss
+++ b/sites/all/themes/dalibert/sass/styles.scss
@@ -29,4 +29,7 @@
 @import "global";
 @import "menu";
 @import "reservation";
+@import "block-reservez";
+@import "scrollbar";
+@import "menu-footer";
 @import "base";
