--- a/sites/all/themes/dalibert/sass/_base.scss
+++ b/sites/all/themes/dalibert/sass/_base.scss
@@ -3,10 +3,12 @@ $colortest1: #444242;
 $colortest2: #41803a;
 
 $black-transparent : rgba(0, 0, 0, 0.5);
+$grey-transparent : rgba(51, 51, 51, 0.8);
 
 $white: #fff;
+$whitetransparent: rgba(255, 255 ,255, 0.8);
 
-$red : rgba(242, 38, 19 , 0.5);
+$red : rgba(242, 38, 19 , 0.7);
 
 $darkgrey: #4a4949;
 $lightgrey : #F2F2F2;
