--- a/sites/all/themes/dalibert/sass/_menu-footer.scss
+++ b/sites/all/themes/dalibert/sass/_menu-footer.scss
@@ -13,13 +13,12 @@
   display:block;
   .content-footer {
     transform: rotate(15deg);
-    margin-top: 4%;
-    margin-left: 22%;
-    width: 43%;
-    height: auto;
-    text-align: right;
+    margin-top: 0;
+    margin-left: 6%;
+    width: 54%;
+    height: 100%;
     p {
-      float: left;
+      float: right;
       display: inline-block;
       font-size: em(12px);
       margin: 0;
