--- a/sites/all/themes/dalibert/sass/styles.scss
+++ b/sites/all/themes/dalibert/sass/styles.scss
@@ -29,7 +29,7 @@
 @import "global";
 @import "menu";
 @import "reservation";
-@import "block-reservez";
+@import "block-sidebar";
 @import "scrollbar";
 @import "menu-footer";
 @import "base";
