--- a/sites/all/themes/dalibert/sass/_menu-footer.scss
+++ b/sites/all/themes/dalibert/sass/_menu-footer.scss
@@ -1,7 +1,7 @@
 @import "base";
 
 
-#block-block-2 {
+.block-footer-menu {
   width: 248%;
   padding: 20px 40px 40px 30px;
   background: $grey-transparent;
