--- a/sites/all/themes/dalibert/sass/_global.scss
+++ b/sites/all/themes/dalibert/sass/_global.scss
@@ -14,6 +14,10 @@ p, h1, h2, h3, span, a, label, input, select {
 
 #main {
   padding: 0;
+  margin: 0;
+}
+#content {
+  padding: 0;
 }
 
 p, label, a, span {
