--- a/sites/all/themes/dalibert/sass/_reservation.scss
+++ b/sites/all/themes/dalibert/sass/_reservation.scss
@@ -8,6 +8,7 @@
     height:100%;
     background: $black-transparent;
     position: fixed;
+    padding-left: 10px;
     #page-title {
       float: right;
       margin-top: 15%;
