--- a/sites/all/themes/dalibert/sass/_global.scss
+++ b/sites/all/themes/dalibert/sass/_global.scss
@@ -21,8 +21,9 @@ p, h1, h2, h3, span, a, label, input, select {
 }
 
 p, label, a, span {
-  font-size: em(14px);
+  font-size: em(13px);
   color: $white;
+  line-height: em(20px);
 }
 
 h1 {
@@ -39,7 +40,7 @@ h3 {
 }
 
 input, select {
-  font-size: em(14px);
+  font-size: em(13px);
   background: $lightgrey;
   border: none;
   border: none;
